--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <hr>
           </div>
           <div class="col-lg-8 mx-auto">
-            <p class="text-faded mb-5">My name is Vicki and this is my story.</p>
+            <p class="text-white mb-5">My name is Vicki and this is my story.</p>
 			<a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find Out More</a>
           </div>
         </div>
@@ -79,7 +79,23 @@
           <div class="col-lg-8 mx-auto text-center">
             <h2 class="section-heading text-white">About</h2>
             <hr class="light my-4">
-            <p class="text-faded mb-4"></p>
+            <p class="text-faded mb-4">
+				Hi there and welcome from Sydney. My name is Vicki Zhong and this website is a bit of a summer project of mine. 
+			 </p>
+			 <p class="text-faded mb-4">
+				I am currently an engineering student at the University of New South Wales. But apart from getting my head around all my lecture material, I also love to learn about Asian cultures. I am a true believer that we should never stop learning. <button type="button" class="text-faded btn btn-primary" data-toggle="collapse" data-target="#moreculture">+</button>
+			</p>
+			<div id="moreculture" class="collapse">
+				<p class="text-faded mb-3">
+					I just have this natural draw to the little slices of information I can learn about the past and take special interest in Chinese history. I love to try Asian food, watch Chinese television series, read classical texts and understand important figures. At the end of 2016, I had the opportunity to spend three months at Tsinghua University in Beijing as part of a research exchange program and finally got to visit the Forbidden City and Great Wall and experience so much. I also took a little trip to Xi'an, the ancient capital city and enjoyed that a lot as well. 
+				</p>
+			</div>
+			<p class="text-faded mb-4">
+				I love to go for walks and to visit places around Sydney (esp. cafes because who doesn't love food). Check out some of my photos of the state library, harbour from Mrs Macquarie's Chair, food, 
+			</p>
+			<p class="text-faded mb-4">
+				I love computers, especially information systems and databases. I've been working on my web development skills but have to admit that when it comes to the digital arena, I am absolutely hopeless with games.
+			</p>
           </div>
         </div>
       </div>
@@ -265,14 +281,15 @@
         </div>
       </div>
     </section>
-<!--
+
     <section class="bg-dark text-white">
       <div class="container text-center">
-        <h2 class="mb-4">Free Download at Start Bootstrap!</h2>
-        <a class="btn btn-light btn-xl sr-button" href="http://startbootstrap.com/template-overviews/creative/">Download Now!</a>
+        <h2 class="mb-4">Social</h2>
+		<hr class="my-4">
+        <p></p>
       </div>
     </section>
--->
+
     <section id="contact">
       <div class="container">
         <div class="row">
